--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ input[type=number] {
       margin-left: 20px;
 }
 
+#plotDiv {
+      margin: auto;
+}
+
 #historikk_table {
       width: 600px;
       margin: auto;
